Fixed gaps in input fields

--- a/stylesheet/form.css
+++ b/stylesheet/form.css
@@ -6,7 +6,7 @@ body {
   width: 800px;
   text-align: center;
   margin: 100px 200px 0px;
-  padding: 100px 200px 0px;
+  padding: 100px 200px 0px 100px;
 }
 
 .bottom {
